--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -23,11 +23,14 @@ amplication-server:
       HOST: "https://server.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
-      GITHUB_CLIENT_ID: "a4e9055e5f21448d6de7"
+      #Kafka
+      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-rquest.request.0
+      KAFKA_BROKERS: [] #ILIA
+      KAFKA_CLIENT_ID: amplication-server
+      KAFKA_GROUP_ID: amplication-server-group
 
-      KAFKA_BROKERS: []
-      KAFKA_CLIENT_ID: 
-      KAFKA_GROUP_ID:
+      #EFS
+      BASE_BUILDS_FOLDER: [EFS-MOUNT-PATH]/build-data #ILIA
 
       #GCP - APPS Builder
       DEFAULT_DISK: gcs
@@ -64,9 +67,19 @@ amplication-git-push-webhook-service:
     hostname: https://webhook.staging-os.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: [localhost:9092]
-      KAFKA_CLIENT_ID:
-      KAFKA_GROUP_ID: git-pull-event
+      #ILIA
+      #(amplication-server) SECRETS
+      #POSTGRESQL_USER: admin
+      #POSTGRESQL_PASSWORD: admin
+      #POSTGRESQL_PORT: "5432"
+      #POSTGRESQL_URL: postgres://admin:admin@localhost:5432
+
+      #NEW SECRETS
+      #WEBHOOKS_SECRET_KEY
+
+      KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
+      KAFKA_BROKERS: [ ] #ILIA
+      KAFKA_CLIENT_ID: git-push-webhook-service
 
 
 amplication-git-pull-service:
@@ -74,25 +87,46 @@ amplication-git-pull-service:
     install: false
   config:
     env:
-      POSTGRESQL_USER: admin
-      POSTGRESQL_PASSWORD: admin
-      POSTGRESQL_PORT: "5432"
-      POSTGRESQL_URL: postgres://admin:admin@localhost:5432
-      COMPOSE_PROJECT_NAME: amplication-git-pull-service
+      #ILIA
+      #NEW SECRETS
+      #POSTGRESQL_USER: admin
+      #POSTGRESQL_PASSWORD: admin
+      #POSTGRESQL_PORT: "5432"
+      #POSTGRESQL_URL: postgres://admin:admin@localhost:5432
+
+      #EXISTS SECRETS
+      #GITHUB_APP_PRIVATE_KEY:
+      #GITHUB_APP_CLIENT_SECRET:
+
       NODE_ENV: "production"
-      STORAGE_PATH: /pull-data
-      MAX_SNAPSHOTS:
+
+      #EFS
+      STORAGE_PATH: [EFS-MOUNT-PATH]/git-data #ILIA
+      MAX_SNAPSHOTS: 100
+
+      #GitHub App
+      GITHUB_APP_APP_ID: "195638"
+      GITHUB_APP_CLIENT_ID: "Iv1.7c4ec6671b7c8cd7"
       GIT_DEFAULT_ORIGIN_NAME: origin
-      GITHUB_APP_APP_ID:
-      GITHUB_APP_PRIVATE_KEY:
-      KAFKA_BROKERS: [localhost:9092]
-      KAFKA_GROUP_ID: git-pull-event
+
+      #Kafka
+      KAFKA_TOPIC: git.external.push.event.0
+      KAFKA_BROKERS: [ ] #ILIA
+      KAFKA_CLIENT_ID: git-pull-service
+      KAFKA_GROUP_ID: git-pull-service-group
 
 amplication-git-pull-request-service:
   config:
     env:
-      KAFKA_BROKERS:
-      KAFKA_GROUP_ID: 
+      #Kafka
+      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-rquest.request.0
+      KAFKA_BROKERS: [ ] #ILIA
+      KAFKA_CLIENT_ID: git-pull-request-service
+      KAFKA_GROUP_ID: git-pull-request-service-group
+
+      #EFS
+      BASE_BUILDS_FOLDER: [EFS-MOUNT-PATH]/build-data #ILIA
+
 
 
 
