--- a/packages/amplication-prisma-db/package.json
+++ b/packages/amplication-prisma-db/package.json
@@ -7,11 +7,11 @@
   "main": "./lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
-    "build": "tsc",
+    "build": "tsc & npm run prisma:generate",
     "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "prisma generate",
-    "postinstall": "npm run prisma:generate",
+    "postinstall": "npm run build",
     "migrate:save": "prisma migrate dev",
     "migrate:up": "prisma migrate deploy",
     "migrate:rollback": "prisma migrate resolve --rolled-back",
