--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -191,10 +191,10 @@ jobs:
           if [ -d "packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
-              cd packages/${{ matrix.service }}
+              cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              cd packages/ee/${{ matrix.service }}
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              cd $GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}
           fi
           echo "hashes: $hashes"
           echo "$hashes" | base64 --decode > hashes.json
@@ -210,10 +210,10 @@ jobs:
           if [ -d "packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
-              cd packages/${{ matrix.service }}
+              cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              cd packages/ee/${{ matrix.service }}
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              cd $GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}
           fi
           aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
       - name: Check if tag already exist
@@ -244,8 +244,8 @@ jobs:
               echo "Directory packages/${{ matrix.service }} exists." 
               path="./packages/${{ matrix.service }}/Dockerfile"
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              path="./packages/ee/${{ matrix.service }}/Dockerfile"
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              path="./ee/packages/${{ matrix.service }}/Dockerfile"
           fi
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           echo "Docker_image: $Docker_image"
@@ -295,11 +295,11 @@ jobs:
         run: |
           if [ -d "packages/${{ matrix.service }}" ] 
           then
-              echo "Directory packages/${{ matrix.service }} exists." 
-              cd packages/${{ matrix.service }}
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              cd packages/ee/${{ matrix.service }}
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              cd $GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}
           fi
           echo "hashes: $hashes"
           echo "$hashes" | base64 --decode > hashes.json
@@ -318,10 +318,10 @@ jobs:
           if [ -d "packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
-              cd packages/${{ matrix.service }}
+              cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              cd packages/ee/${{ matrix.service }}
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              cd $GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}
           fi
           aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
       - name: Retag images
@@ -335,8 +335,8 @@ jobs:
               echo "Directory packages/${{ matrix.service }} exists." 
               path="./packages/${{ matrix.service }}/Dockerfile"
           else
-              echo "Error: Directory packages/${{ matrix.service }} does not exists."
-              path="./packages/ee/${{ matrix.service }}/Dockerfile"
+              echo "Directory ee/packages/${{ matrix.service }} exists." 
+              path="./ee/packages/${{ matrix.service }}/Dockerfile"
           fi
           echo "GITHUB_HASH: $GITHUB_HASH"
           echo "ECR_REPOSITORY: $ECR_REPOSITORY"
