fixed docker push command

--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -249,9 +249,10 @@ jobs:
           fi
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           echo "Docker_image: $Docker_image"
-          command="docker build -f $path . -t $Docker_image && docker push $Docker_image"
+          command="docker build -f $path . -t $Docker_image"
           echo "$command"
           $command
+          docker push $Docker_image
           export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
           echo "MANIFEST: $MANIFEST"
           sh .github/workflows/scripts/ecr_retag.sh
