--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -188,7 +188,7 @@ jobs:
           working-directory: packages/${{ matrix.service }}
           hashes: ${{ needs.changes.outputs.hashes }}
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
               cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
@@ -207,7 +207,7 @@ jobs:
           echo $GITHUB_HASH
       - name: Check if repo exist
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ]
           then
               echo "Directory packages/${{ matrix.service }} exists." 
               cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
@@ -239,13 +239,13 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           TAG_LIST: "${{ github.run_id }},${{ github.sha }},${{ env.BRANCH_NAME }}"
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
-              path="./packages/${{ matrix.service }}/Dockerfile"
+              path="$GITHUB_WORKSPACE/packages/${{ matrix.service }}/Dockerfile"
           else
               echo "Directory ee/packages/${{ matrix.service }} exists." 
-              path="./ee/packages/${{ matrix.service }}/Dockerfile"
+              path="$GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}/Dockerfile"
           fi
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           echo "Docker_image: $Docker_image"
@@ -294,7 +294,7 @@ jobs:
         env:
           hashes: ${{ needs.changes.outputs.hashes }}
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
           then
               echo "Directory ee/packages/${{ matrix.service }} exists." 
               cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
@@ -316,7 +316,7 @@ jobs:
           echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
       - name: Check if repo exist
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
               cd $GITHUB_WORKSPACE/packages/${{ matrix.service }}
@@ -331,13 +331,13 @@ jobs:
           TAG_LIST_SHORT: "${{ env.GITHUB_HASH }},${{ env.BRANCH_NAME }}"
           TAG_LIST_FULL: "${{ env.GITHUB_HASH }},${{ env.BRANCH_NAME }},${{ github.run_id }}"
         run: |
-          if [ -d "packages/${{ matrix.service }}" ] 
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
           then
               echo "Directory packages/${{ matrix.service }} exists." 
-              path="./packages/${{ matrix.service }}/Dockerfile"
+              path="$GITHUB_WORKSPACE/packages/${{ matrix.service }}/Dockerfile"
           else
               echo "Directory ee/packages/${{ matrix.service }} exists." 
-              path="./ee/packages/${{ matrix.service }}/Dockerfile"
+              path="$GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}/Dockerfile"
           fi
           echo "GITHUB_HASH: $GITHUB_HASH"
           echo "ECR_REPOSITORY: $ECR_REPOSITORY"
