added postgress sql secrets

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -28,6 +28,7 @@ jobs:
       GITHUB_CLIENT_SECRET: ${{ steps.create-secret-names.outputs.GITHUB_CLIENT_SECRET }}
       POSTGRESQL_PASSWORD: ${{ steps.create-secret-names.outputs.POSTGRESQL_PASSWORD }}
       POSTGRESQL_URL: ${{ steps.create-secret-names.outputs.POSTGRESQL_URL }}
+      PULL_POSTGRESQL_URL: ${{ steps.create-secret-names.outputs.PULL_POSTGRESQL_URL }}
       JWT_SECRET: ${{ steps.create-secret-names.outputs.JWT_SECRET }}
       SERVICE_JWT_SECRET: ${{ steps.create-secret-names.outputs.SERVICE_JWT_SECRET }}
     steps:
@@ -44,6 +45,7 @@ jobs:
         echo "::set-output name=GITHUB_CLIENT_SECRET::AWS_${TARGET_ENV_SECRET}_GITHUB_CLIENT_SECRET"
         echo "::set-output name=POSTGRESQL_PASSWORD::AWS_${TARGET_ENV_SECRET}_POSTGRESQL_PASSWORD"
         echo "::set-output name=POSTGRESQL_URL::AWS_${TARGET_ENV_SECRET}_POSTGRESQL_URL"
+        echo "::set-output name=PULL_POSTGRESQL_URL::AWS_${TARGET_ENV_SECRET}_PULL_POSTGRESQL_URL"
         echo "::set-output name=JWT_SECRET::AWS_${TARGET_ENV_SECRET}_JWT_SECRET"
         echo "::set-output name=SERVICE_JWT_SECRET::AWS_${TARGET_ENV_SECRET}_SERVICE_JWT_SECRET"
       env:
@@ -60,6 +62,7 @@ jobs:
       GITHUB_CLIENT_SECRET: ${{ needs.prepare.outputs.GITHUB_CLIENT_SECRET }}
       POSTGRESQL_PASSWORD: ${{ needs.prepare.outputs.POSTGRESQL_PASSWORD }}
       POSTGRESQL_URL: ${{ needs.prepare.outputs.POSTGRESQL_URL }}
+      PULL_POSTGRESQL_URL: ${{ needs.prepare.outputs.PULL_POSTGRESQL_URL }}
       JWT_SECRET: ${{ needs.prepare.outputs.JWT_SECRET }}
       SERVICE_JWT_SECRET: ${{ needs.prepare.outputs.SERVICE_JWT_SECRET }}
     steps:
@@ -150,19 +153,19 @@ jobs:
           SECRETS+=" -p amplication-server.secrets.GITHUB_APP_PRIVATE_KEY=$GITHUB_APP_PRIVATE_KEY"
           SECRETS+=" -p amplication-server.secrets.GITHUB_CLIENT_SECRET=$GITHUB_CLIENT_SECRET"
           SECRETS+=" -p amplication-server.secrets.POSTGRESQL_PASSWORD=$POSTGRESQL_PASSWORD"
-          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL=postgres://postgres:$POSTGRESQL_PASSWORD@amplication-useast1-staging-os-primary.csf5nwabym5c.us-east-1.rds.amazonaws.com:5432"
+          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL=$POSTGRESQL_URL"
           SECRETS+=" -p amplication-server.secrets.JWT_SECRET=$JWT_SECRET"
           SECRETS+=" -p amplication-server.secrets.SERVICE_JWT_SECRET=$SERVICE_JWT_SECRET"
 
           SECRETS+=" -p amplication-git-push-webhook-service.secrets.GITHUB_APP_CLIENT_SECRET=$GITHUB_APP_CLIENT_SECRET"
           SECRETS+=" -p amplication-git-push-webhook-service.secrets.GITHUB_APP_PRIVATE_KEY=$GITHUB_APP_PRIVATE_KEY"
           SECRETS+=" -p amplication-git-push-webhook-service.secrets.POSTGRESQL_PASSWORD=$POSTGRESQL_PASSWORD"
-          SECRETS+=" -p amplication-git-push-webhook-service.secrets.POSTGRESQL_URL=postgres://postgres:$POSTGRESQL_PASSWORD@amplication-useast1-staging-os-primary.csf5nwabym5c.us-east-1.rds.amazonaws.com:5432"
+          SECRETS+=" -p amplication-git-push-webhook-service.secrets.POSTGRESQL_URL=$POSTGRESQL_URL"
 
           SECRETS+=" -p amplication-git-pull-service.secrets.GITHUB_APP_CLIENT_SECRET=$GITHUB_APP_CLIENT_SECRET"
           SECRETS+=" -p amplication-git-pull-service.secrets.GITHUB_APP_PRIVATE_KEY=$GITHUB_APP_PRIVATE_KEY"
           SECRETS+=" -p amplication-git-pull-service.secrets.POSTGRESQL_PASSWORD=$POSTGRESQL_PASSWORD"
-          SECRETS+=" -p amplication-git-pull-service.secrets.POSTGRESQL_URL=postgres://postgres:$POSTGRESQL_PASSWORD@amplication-useast1-staging-os-pull.csf5nwabym5c.us-east-1.rds.amazonaws.com:5432"
+          SECRETS+=" -p amplication-git-pull-service.secrets.POSTGRESQL_URL=$PULL_POSTGRESQL_URL"
 
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS $SECRETS --upsert"
           COMMAND=$(echo $COMMAND|tr -d '\n')
@@ -180,6 +183,7 @@ jobs:
           GITHUB_CLIENT_SECRET: ${{ secrets[env.GITHUB_CLIENT_SECRET] }}
           POSTGRESQL_PASSWORD: ${{ secrets[env.POSTGRESQL_PASSWORD] }}
           POSTGRESQL_URL: ${{ secrets[env.POSTGRESQL_URL] }}
+          PULL_POSTGRESQL_URL: ${{ secrets[env.PULL_POSTGRESQL_URL] }}
           JWT_SECRET: ${{ secrets[env.JWT_SECRET] }}
           SERVICE_JWT_SECRET: ${{ secrets[env.SERVICE_JWT_SECRET] }}
       
