--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -1,5 +1,5 @@
-KAFKA_BROKER_IP_ENV_KEY = localhost:9092,localhost:9090
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
+KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_REPOSITORY_PUSH_QUEUE = repositoryPush_created
 
 # Postgres
