--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -8,10 +8,13 @@ on:
         default: staging-os
         required: true
         options: 
-        - dev
         - staging-os
         - staging
         - prod
+        - custom
+      target-env-custom:
+        description: Custom env name
+        required: false
       source-branch:
         type: string
         description: Which branch to use for deployment
@@ -22,46 +25,25 @@ jobs:
     runs-on: ubuntu-18.04
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
-      GCP: ${{ steps.create-secret-names.outputs.GCP }}
-      GITHUB_APP_CLIENT_SECRET: ${{ steps.create-secret-names.outputs.GITHUB_APP_CLIENT_SECRET }}
-      GITHUB_APP_PRIVATE_KEY: ${{ steps.create-secret-names.outputs.GITHUB_APP_PRIVATE_KEY }}
-      GITHUB_CLIENT_SECRET: ${{ steps.create-secret-names.outputs.GITHUB_CLIENT_SECRET }}
-      POSTGRESQL_PASSWORD: ${{ steps.create-secret-names.outputs.POSTGRESQL_PASSWORD }}
-      POSTGRESQL_URL: ${{ steps.create-secret-names.outputs.POSTGRESQL_URL }}
-      JWT_SECRET: ${{ steps.create-secret-names.outputs.JWT_SECRET }}
-      SERVICE_JWT_SECRET: ${{ steps.create-secret-names.outputs.SERVICE_JWT_SECRET }}
     steps:
     - name: create secret names
       id: create-secret-names
       run: |
+        if [ "$TARGET_ENV" = "custom" ]; then
+          TARGET_ENV=$target-env-custom
+        fi
         export TARGET_ENV_SECRET=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
         echo "TARGET_ENV_SECRET: $TARGET_ENV_SECRET"
-      
         echo "::set-output name=ARGOCD::AWS_${TARGET_ENV_SECRET}_ARGOCD"
-        echo "::set-output name=GCP::AWS_${TARGET_ENV_SECRET}_GCP"
-        echo "::set-output name=GITHUB_APP_CLIENT_SECRET::AWS_${TARGET_ENV_SECRET}_GITHUB_APP_CLIENT_SECRET"
-        echo "::set-output name=GITHUB_APP_PRIVATE_KEY::AWS_${TARGET_ENV_SECRET}_GITHUB_APP_PRIVATE_KEY"
-        echo "::set-output name=GITHUB_CLIENT_SECRET::AWS_${TARGET_ENV_SECRET}_GITHUB_CLIENT_SECRET"
-        echo "::set-output name=POSTGRESQL_PASSWORD::AWS_${TARGET_ENV_SECRET}_POSTGRESQL_PASSWORD"
-        echo "::set-output name=POSTGRESQL_URL::AWS_${TARGET_ENV_SECRET}_POSTGRESQL_URL"
-        echo "::set-output name=JWT_SECRET::AWS_${TARGET_ENV_SECRET}_JWT_SECRET"
-        echo "::set-output name=SERVICE_JWT_SECRET::AWS_${TARGET_ENV_SECRET}_SERVICE_JWT_SECRET"
       env:
         TARGET_ENV: ${{ github.event.inputs.target-env }}  
+        TARGET_ENV_CUSTOM: ${{ github.event.inputs.target-env-custom }}  
   deploy:
     runs-on: ubuntu-18.04
     needs:
       - prepare
     env:
       ARGOCD: ${{ needs.prepare.outputs.ARGOCD }}
-      GCP: ${{ needs.prepare.outputs.GCP }}
-      GITHUB_APP_CLIENT_SECRET: ${{ needs.prepare.outputs.GITHUB_APP_CLIENT_SECRET }}
-      GITHUB_APP_PRIVATE_KEY: ${{ needs.prepare.outputs.GITHUB_APP_PRIVATE_KEY }}
-      GITHUB_CLIENT_SECRET: ${{ needs.prepare.outputs.GITHUB_CLIENT_SECRET }}
-      POSTGRESQL_PASSWORD: ${{ needs.prepare.outputs.POSTGRESQL_PASSWORD }}
-      POSTGRESQL_URL: ${{ needs.prepare.outputs.POSTGRESQL_URL }}
-      JWT_SECRET: ${{ needs.prepare.outputs.JWT_SECRET }}
-      SERVICE_JWT_SECRET: ${{ needs.prepare.outputs.SERVICE_JWT_SECRET }}
     steps:
       - uses: actions/checkout@v2
       - name: configure AWS credentials
@@ -88,20 +70,22 @@ jobs:
       - name: set namespace
         id: set-namespace
         run: |
-          NAMESPACE=$TARGET_ENV
-          if [ "$TARGET_ENV" = "dev" ]; then
-            NAMESPACE+="-$SOURCE_BRANCH_NAME"
+          if [ "$TARGET_ENV" = "custom" ]; then
+            TARGET_ENV=$target-env-custom
           fi
+          NAMESPACE=$TARGET_ENV
           echo "Will deploy to $NAMESPACE"
           echo "NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
         env:
           TARGET_ENV: ${{ github.event.inputs.target-env }}
+          TARGET_ENV_CUSTOM: ${{ github.event.inputs.target-env-custom }}  
       - name: set cluster name
         id: set-cluster-name
         run: |
-          CLUSTER_NAME="useast1-$TARGET_ENV"
-          if [ "$TARGET_ENV" = "dev" ]; then
+          if [ "$TARGET_ENV" = "custom" ]; then
             CLUSTER_NAME="useast1-staging-os"
+          else
+            CLUSTER_NAME="useast1-$TARGET_ENV"
           fi
           echo "Will deploy to $CLUSTER_NAME eks cluster"
           echo "CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
@@ -127,8 +111,6 @@ jobs:
           cat namespace.yaml
           aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
           kubectl apply -f namespace.yaml
-        env:
-          TARGET_ENV: ${{ github.event.inputs.target-env }}
       - name: install argocd
         id: install-argocd
         run: |
@@ -137,6 +119,15 @@ jobs:
       - name: deploy app
         id: deploy-app
         run: |
+          if [ "$TARGET_ENV" = "custom" ]; then
+            TARGET_ENV=$target-env-custom
+          fi
+          secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV | jq -r '.SecretList[0].ARN')
+          secret_values_file_content=$(aws secretsmanager get-secret-value --secret-id $secret_arn | jq -r '.SecretString') > secret-$TARGET_ENV.yaml
+          if [ "$TARGET_ENV" = "custom" ]; then
+            sed -i "s|staging-os|$NAMESPACE|g" secret-$TARGET_ENV.yaml
+          fi
+          cat secret-$TARGET_ENV.yaml
           COMMONM_VALUES_FILE="values-common.yaml"
           ENV_VALUES_FILE="values-$TARGET_ENV.yaml"
           ARGO_CD_URL="argocd.$TARGET_ENV.amplication-dev.com"
@@ -145,14 +136,7 @@ jobs:
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
           echo "$COMMAND"
           $COMMAND
-          SECRETS="-p amplication-server.secrets.GCP=$GCP"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_CLIENT_SECRET=$GITHUB_APP_CLIENT_SECRET"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_APP_PRIVATE_KEY=$GITHUB_APP_PRIVATE_KEY"
-          SECRETS+=" -p amplication-server.secrets.GITHUB_CLIENT_SECRET=$GITHUB_CLIENT_SECRET"
-          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_PASSWORD=$POSTGRESQL_PASSWORD"
-          SECRETS+=" -p amplication-server.secrets.POSTGRESQL_URL=$POSTGRESQL_URL"
-          SECRETS+=" -p amplication-server.secrets.JWT_SECRET=$JWT_SECRET"
-          SECRETS+=" -p amplication-server.secrets.SERVICE_JWT_SECRET=$SERVICE_JWT_SECRET"
+          SECRETS="-f secret-$TARGET_ENV.yaml"
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS $SECRETS --upsert"
           COMMAND=$(echo $COMMAND|tr -d '\n')
           echo "$COMMAND"
@@ -162,13 +146,5 @@ jobs:
           $COMMAND
         env:
           TARGET_ENV: ${{ github.event.inputs.target-env }}
-          ARGO_CD_PASSWORD: ${{ secrets[env.ARGOCD] }}
-          GCP: ${{ secrets[env.GCP] }}
-          GITHUB_APP_CLIENT_SECRET: ${{ secrets[env.GITHUB_APP_CLIENT_SECRET] }}
-          GITHUB_APP_PRIVATE_KEY: ${{ secrets[env.GITHUB_APP_PRIVATE_KEY] }}
-          GITHUB_CLIENT_SECRET: ${{ secrets[env.GITHUB_CLIENT_SECRET] }}
-          POSTGRESQL_PASSWORD: ${{ secrets[env.POSTGRESQL_PASSWORD] }}
-          POSTGRESQL_URL: ${{ secrets[env.POSTGRESQL_URL] }}
-          JWT_SECRET: ${{ secrets[env.JWT_SECRET] }}
-          SERVICE_JWT_SECRET: ${{ secrets[env.SERVICE_JWT_SECRET] }}
+          TARGET_ENV_CUSTOM: ${{ github.event.inputs.target-env-custom }}  
       
