foc(amplication-client) start implementing novu notification

--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -8,3 +8,5 @@ REACT_APP_AMPLITUDE_API_KEY=aVqxCAcXOdCx5DPI41s6EmwsSCB8Kjz6
 ֿREACT_APP_GITHUB_CLIENT_ID=2e4a744d73ea633fd615
 
 REACT_APP_DATA_SOURCE="/graphql"
+
+NOVU_APP_ID_FROM_ADMIN_PANEL="qBrB-jRV8iOp"
