--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -23,11 +23,15 @@ amplication-server:
       HOST: "https://server.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
+      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS:
         - b-2.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
         - b-1.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
       KAFKA_CLIENT_ID: amplication-server
-      KAFKA_GROUP_ID: amplication-server
+      KAFKA_GROUP_ID: amplication-server-group
+
+      #EFS
+      BASE_BUILDS_FOLDER: /amplication-data/build-data
 
       #GCP - APPS Builder
       DEFAULT_DISK: gcs
@@ -67,7 +71,8 @@ amplication-git-push-webhook-service:
       KAFKA_BROKERS:
         - b-2.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
         - b-1.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
-      KAFKA_CLIENT_ID: git-push-webhook
+      KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
+      KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
 
 amplication-git-pull-service:
@@ -89,19 +94,20 @@ amplication-git-pull-service:
       NODE_ENV: "production"
 
       #EFS
-      STORAGE_PATH: /amplication-data/git-data
+      STORAGE_PATH: /amplication-data/build-data
       MAX_SNAPSHOTS: 100
 
       #GitHub App
       GITHUB_APP_APP_ID: "195638"
       GITHUB_APP_CLIENT_ID: "Iv1.7c4ec6671b7c8cd7"
       GIT_DEFAULT_ORIGIN_NAME: origin
+      KAFKA_TOPIC: git.external.push.event.0
       GITHUB_APP_PRIVATE_KEY:
       KAFKA_BROKERS:
         - b-2.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
         - b-1.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
-      KAFKA_CLIENT_ID: git-pull
-      KAFKA_GROUP_ID: amplication-git-pull-service
+      KAFKA_CLIENT_ID: git-pull-service
+      KAFKA_GROUP_ID: git-pull-service-group
 
 amplication-git-pull-request-service:
   config:
@@ -109,5 +115,7 @@ amplication-git-pull-request-service:
       KAFKA_BROKERS:
         - b-2.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
         - b-1.amplication-useast1-s.bqx2i9.c22.kafka.us-east-1.amazonaws.com:9094
-      KAFKA_CLIENT_ID: git-pull-request
-      KAFKA_GROUP_ID: amplication-git-pull-request-service
+      KAFKA_CLIENT_ID: git-pull-request-service
+      KAFKA_GROUP_ID: git-pull-request-service-group
+      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
+      BASE_BUILDS_FOLDER: /amplication-data/build-data
