--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -209,11 +209,22 @@ jobs:
           then  
             echo "tag already exist"
             echo "::set-output name=tag_exist::true"
+            cmd="$(aws ecr describe-images --repository-name=$ECR_REPOSITORY --image-ids=imageTag=$BRANCH_NAME)"
+            if [[ ! -z "$cmd" ]]
+            then  
+              echo "tag already exist (branch)"
+            else
+              echo "tag doesn't exist (branch)"
+              export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
+              echo "MANIFEST: $MANIFEST"
+              sh .github/workflows/scripts/ecr_retag.sh
+            fi
           else
             echo "tag doesn't exist"
             echo "::set-output name=tag_exist::false"
           fi
-      
+        env:
+          TAG_LIST: "${{ env.BRANCH_NAME }}"
       - name: set branch-name
         run: |
             echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
