--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -239,7 +239,8 @@ jobs:
             echo "tag doesn't exist"
             echo "::set-output name=tag_exist::false"
           fi
-      
+        env:
+          TAG_LIST: "${{ env.BRANCH_NAME }}" 
       - name: set branch-name
         run: |
             echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
