--- a/helm/charts/amplication/Chart.yaml
+++ b/helm/charts/amplication/Chart.yaml
@@ -17,6 +17,10 @@ dependencies:
 - name: amplication-server
   version: "0.1.0"
   repository: "file://../services/amplication-server"
+- name: cp-helm-charts
+  version: "0.6.1"
+  repository: "https://confluentinc.github.io/cp-helm-charts/"
+  condition: cp-helm-charts.enabled
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
