--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -10,10 +10,10 @@ amplication-client:
       REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server.amplication.com/github"
       REACT_APP_GITHUB_CLIENT_ID: value
       REACT_APP_PADDLE_VENDOR_ID: "131992"
-      REACT_APP_FEATURE_FLAGS: "{\"SHOW_DEPLOYER\":true}"
+      REACT_APP_FEATURE_FLAGS: '{"SHOW_DEPLOYER":true}'
 
 amplication-server:
-  resources: 
+  resources:
     limits:
       cpu: 3
       memory: 6Gi
@@ -30,8 +30,8 @@ amplication-server:
     hostname_production: server.amplication.com
   config:
     env:
-      HOST: "https://server.amplication.com"
-      CLIENT_HOST: 'https://app.amplication.com'
+      HOST: "https://app.amplication.com"
+      CLIENT_HOST: "https://app.amplication.com"
 
       ENABLE_SHUTDOWN_HOOKS: "1"
       DISABLE_EVENT_TRACKING: "1"
