work in progress

--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -10,3 +10,5 @@ REACT_APP_AMPLITUDE_API_KEY=aVqxCAcXOdCx5DPI41s6EmwsSCB8Kjz6
 REACT_APP_DATA_SOURCE="/graphql"
 
 NOVU_APP_ID_FROM_ADMIN_PANEL="qBrB-jRV8iOp"
+
+NOVU_SAMPLE_USE_ID="cl3r1c72x0090kfp512158a4f"
