--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -35,11 +35,11 @@ jobs:
           changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
           while IFS= read -r changed_file ; do 
             echo "changed_file: $changed_file"
-            if [[ "$changed_file" == *"packages/"* ]]; then
+            if [[ "$changed_file" == *"packages/"* || "$changed_file" == *"ee/packages/"* ]]; then
               all_changed_files=$all_changed_files",$changed_file"
             fi
           done <<< "$changed_files"
-          all_changed_files="${all_changed_files:2}"
+          all_changed_files="${all_changed_files:1}"
           echo "all_changed_files: $all_changed_files"
           echo "::set-output name=all_changed_files::$all_changed_files"
       - name: get changed files (pr)
@@ -52,6 +52,7 @@ jobs:
             .github/**
           files: |
             packages/**
+            ee/packages/**
       - name: setup python
         uses: actions/setup-python@v2
         with:
@@ -173,6 +174,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws-region: us-east-1
           
+      - run: |
+          if [ -d "$GITHUB_WORKSPACE/packages/${{ matrix.service }}" ] 
+          then
+              echo "Directory packages/${{ matrix.service }} exists." 
+              SERVICES_FOLDER=$GITHUB_WORKSPACE/packages/${{ matrix.service }}
+          elif [ -d "$GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}" ] 
+          then
+              echo "Directory ee/packages/${{ matrix.service }} exists."
+              SERVICES_FOLDER=$GITHUB_WORKSPACE/ee/packages/${{ matrix.service }}
+          else
+            echo "Unable to locate service folder: ${{ matrix.service }}"
+            exit 1
+          fi
+          echo "SERVICES_FOLDER=${SERVICES_FOLDER}" >> $GITHUB_ENV
+        name: Set services folder
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -197,9 +213,11 @@ jobs:
           echo "GITHUB_HASH=${GITHUB_HASH}" >> $GITHUB_ENV
           echo $GITHUB_HASH
       - name: Check if repo exist
-        working-directory: packages/${{ matrix.service }}
         run: |
           aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
+      - name: set branch-name
+        run: |
+            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
       - name: Check if tag already exist
         id: tag-exist
         run: |
@@ -216,7 +234,6 @@ jobs:
             else
               echo "tag doesn't exist (branch)"
               export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
-              echo "MANIFEST: $MANIFEST"
               sh .github/workflows/scripts/ecr_retag.sh
             fi
           else
@@ -224,18 +241,20 @@ jobs:
             echo "::set-output name=tag_exist::false"
           fi
         env:
-          TAG_LIST: "${{ env.BRANCH_NAME }}"
-      - name: set branch-name
-        run: |
-            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
+          TAG_LIST: "${{ env.BRANCH_NAME }}" 
       - name: Build, tag, and push image to Amazon ECR
         if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           TAG_LIST: "${{ github.run_id }},${{ github.sha }},${{ env.BRANCH_NAME }}"
         run: |
+          echo "Will work from: $SERVICES_FOLDER"
+          cd $SERVICES_FOLDER
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
-          docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
+          echo "Docker_image: $Docker_image"
+          command="docker build -f $path . -t $Docker_image"
+          echo "$command"
+          $command
           docker push $Docker_image
           export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
           echo "MANIFEST: $MANIFEST"
@@ -276,7 +295,6 @@ jobs:
           SERVICE_NAME: ${{ matrix.service }}
       - name: Set hash
         env:
-          working-directory: packages/${{ matrix.service }}
           hashes: ${{ needs.changes.outputs.hashes }}
         run: |
           echo "hashes: $hashes"
@@ -292,7 +310,6 @@ jobs:
         run: |
           echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
       - name: Check if repo exist
-        working-directory: packages/${{ matrix.service }}
         run: |
           aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
       - name: Retag images
@@ -301,13 +318,14 @@ jobs:
           TAG_LIST_SHORT: "${{ env.GITHUB_HASH }},${{ env.BRANCH_NAME }}"
           TAG_LIST_FULL: "${{ env.GITHUB_HASH }},${{ env.BRANCH_NAME }},${{ github.run_id }}"
         run: |
+          echo "Dockerfile path: $SERVICES_FOLDER/Dockerfile"
           echo "GITHUB_HASH: $GITHUB_HASH"
           echo "ECR_REPOSITORY: $ECR_REPOSITORY"
           export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
           if [ "$MANIFEST" = "null" ]
           then
             Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
-            docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
+            docker build -f $SERVICES_FOLDER/Dockerfile . -t $Docker_image
             docker push $Docker_image
             export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
             export TAG_LIST=$TAG_LIST_FULL
